--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 
 <head>
-
     <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
@@ -18,11 +17,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Valler Webdesign</title>
 </head>
 
 <body>
-
+    <header>
+        <div id="logo">
+            <img src="">
+        </div>
+        <nav>
+        </nav>
+    </header>
+    <main>
+        <section id="tjeneste">
+        </section>
+        <section id="om">
+            <div id="beskrivelse">
+            </div>
+        </section>
+        <aside id="medlemmer">
+        </aside>
+        <section id="kontakt">
+            <div id="skjema">
+            </div>
+        </section>
+    </main>
+    <footer>
+    </footer>
 </body>
 
 </html>
