--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="index.js"></script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
@@ -42,14 +43,14 @@
         </section>
         <section id="om">
             <h1>Om Valler Webdesign.</h1>
-            <div id="beskrivelse">
-                <p>
-                    Valler Webdesign er en ungdomsbedrift som hjelper lokalbedrifter skape unike og profesjonelle
-                    nettsider.
-                    <br><br>
-                    Vårt mål er å gjøre det enkelt og rimelig for småbedrifter å tiltrekke kunder i en digital verden.
-                </p>
-            </div>
+        </section>
+        <section id="beskrivelse">
+            <p>
+                Valler Webdesign er en ungdomsbedrift som hjelper lokalbedrifter skape unike og profesjonelle
+                nettsider.
+                <br><br>
+                Vårt mål er å gjøre det enkelt og rimelig for småbedrifter å tiltrekke kunder i en digital verden.
+            </p>
         </section>
         <aside id="medlemmer">
             <h3>Johan Haga Mohn</h3>
@@ -77,26 +78,20 @@
                     </label>
                 </div>
                 <div id="email">
-                    <input type="email" name="email" required>
+                    <input type="text" name="email" required>
                     <label for="email">
                         <span>Email:</span>
                     </label>
                 </div>
                 <div id="send">
                     <button type="submit">Send</button>
-                    <img src="media/send.svg" alt="">
                 </div>
             </form>
-        </section>
-        <section id="bakgrunn">
-            <img id="web" src="media/skyer-web.svg" alt="">
-            <img id="tablet" src="media/skyer-tablet.svg" alt="">
-            <img id="mobil" src="media/skyer-mobil.svg" alt="">
         </section>
     </main>
     <footer>
         <a href="https://w2.brreg.no/enhet/sok/detalj.jsp?orgnr=924003138">
-            <h5>© 2020 Valler Webdeisng UB</h5>
+            <h5>© 2020 Valler Webdesign UB</h5>
         </a>
     </footer>
 </body>
