--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
         <div id="logo">
             <img src="/media/logo.svg" alt="Logo">
         </div>
-        <nav>
-            <ul>
-                <li><a href="#tjeneste">Hjem</a></li>
-                <li><a href="#om">Om</a></li>
-                <li><a href="#kontakt">Kontakt</a></li>
-            </ul>
-        </nav>
+        <div id="menu">
+            <input type="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+            <nav>
+                <ul>
+                    <li><a href="#tjeneste">Hjem</a></li>
+                    <li><a href="#om">Om</a></li>
+                    <li><a href="#kontakt">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section id="tjeneste">
