Added tweaks and accessibility

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <p>
                 Valler Webdesign er en ungdomsbedrift som hjelper lokalbedrifter skape unike og profesjonelle
                 nettsider.
-                <br><br>
+            </p>
+            <p>
                 Vårt mål er å gjøre det enkelt og rimelig for småbedrifter å tiltrekke kunder i en digital verden.
             </p>
         </section>
@@ -86,7 +87,7 @@
                 <div id="email">
                     <input type="text" name="email" required>
                     <label for="email">
-                        <span>Email:</span>
+                        <span>Emne:</span>
                     </label>
                 </div>
                 <div id="send">
