--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="/media/logo.svg" alt="Logo">
+            <img src="media/logo.svg" alt="Logo">
         </div>
         <div id="menu">
             <input type="checkbox">
@@ -44,7 +44,7 @@
     </header>
     <main>
         <section id="tjeneste">
-            <img src="/media/design.svg" alt="Design">
+            <img src="media/design.svg" alt="Design">
             <h2>Din webdesignservice fra Valler.</h2>
         </section>
         <section id="om">
