--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="index.js"></script>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
-    <link rel="manifest" href="/media/site.webmanifest">
-    <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="\#025381">
-    <link rel="shortcut icon" href="/media/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="media/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="media/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="media/favicon-16x16.png">
+    <link rel="manifest" href="media/site.webmanifest">
+    <link rel="mask-icon" href="media/safari-pinned-tab.svg" color="\#025381">
+    <link rel="shortcut icon" href="media/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Valler Webdesign">
     <meta name="application-name" content="Valler Webdesign">
     <meta name="msapplication-TileColor" content="\#2b5797">
-    <meta name="msapplication-config" content="/media/browserconfig.xml">
+    <meta name="msapplication-config" content="media/browserconfig.xml">
     <meta name="theme-color" content="\#ffffff">
 
     <meta charset="UTF-8">
